feat(berify): 導入 TechnicalSpotlight 元件並優化專案頁面架構
- 新增 `TechnicalSpotlight` 元件，用於展示架構圖、技術對比與挑戰
- 實作 `cn` 常用工具函式（整合 `clsx` 與 `tailwind-merge`）
- 重構 Berify 專案頁面以使用新元件，並移除冗餘的舊版實作
- 更新 Berify 專案的多語系（en/zh）翻譯內容
- 新增 `framer-motion` 與 `tailwind-merge` 等依賴項

--- a/public/locales/en/projects/_common.json
+++ b/public/locales/en/projects/_common.json
@@ -2,6 +2,7 @@
   "sourceCode": "Source Code",
   "storeLink": "Store",
   "projectDemo": "Project Demo",
-  "keyContributions": "Key Contributions"
+  "keyContributions": "Key Contributions",
+  "gallery": "Gallery"
 }
 
