--- a/public/locales/zh/projects/_common.json
+++ b/public/locales/zh/projects/_common.json
@@ -2,6 +2,7 @@
   "sourceCode": "原始碼",
   "storeLink": "商店",
   "projectDemo": "專案展示",
-  "keyContributions": "核心貢獻"
+  "keyContributions": "核心貢獻",
+  "gallery": "相簿"
 }
 
